<resources>
    <string name="app_name">Flyttguiden</string>
    <string name="tips_h1">Att tänka på när du eller ni letar efter ett nytt ställe</string>
    <string name="tips_fastigheter_h1">Fastigheter:</string>
    <string name="tips_egen_fastighet_h2">- Egen fastighet, typ en villa som ej är en bostadsrätt.</string>
    <string name="tips_egen_fastighet_text">Att ha en egen fastighet ger många fördelar så som att du kan göra allt från stora förändringar - utan någon utomståendes tillstånd så som att slå ut en vägg, bygga altan eller liknande, - till mindre ändringar så som att måla om ett rum eller en trappa. Men med stor frihet kommer också en stor skyldighet, när något händer i ditt hem så får du själv stå för det (till skillnad i många fall om du bor i en bostadsrätt) - går värmepannan eller något liknande dyrt sönder? Då är det bara att betala. Det innebär att du måste räkna in en buffert i din hushållskassa varje månad för att klara av oförutsägbara kostnader, dock denna kostnaden kan lite halvt jämföras med avgiften du betalar till föreningen när du har en bostadsrätt som du alltså då slipper betala när du har en egen fastighet. Lägg även till kostnaden av att betala en fastighetsskatt till staten. En bra sak att ha i tanken vid köp är att verkligen få hela huset besiktigat grundligt, kan finnas mycket dyra fel som döljs. Du kan utan någon annans tillstånd hyra ut din egna fastighet till vem du vill.</string>
    <string name="tips_bostadsratt_h2">- Bostadsrätt, när man köper en andel i bostadsrättsföreningen.</string>
    <string name="tips_bostadsratt_text">När du äger en bostadsrätt så är det rätt annorlunda jämt emot en Egen fastighet. Du köper en bostadsrätt men du köper egentligen inte t.ex lägenheten, du köper en del av bostadsrättsföreningen.  Detta betyder att du inte kan göra vad du vill i ”din” bostadsrätt så som att slå ut väggar, måla om utsidan på huset osv, för att få göra detta behöver du ett tillstånd av just din bostadsrättsförening. En annan skillnad är att du i en bostadsrätt, betala en avgift varje månad till din förening för att de ska hålla koll på själva fastigheten du bor i om något går sönder eller för att fixa uteplatsen t.ex. Avgiften är i regel billigare än hyran på en hyreslägenhet av samma storlek t.ex. men sedan tillkommer eventuella lån och amorteringar du får vid köpet. En generalisering man kan göra när det kommer till bostadsrättsföreningar är att de som har funnit länge har ofta en bättre ekonomi än de nya. Kolla upp din förenings ekonomi innan köp, om ekonomin är dålig kan du vänta dig avgiftshöjningar inom en snar framtid. Oftast kan du hyra ut din bostadsrätt till vem du vill men behövs ett godkännande från föreningen, du äger trots allt inte själva huset eller lägenheten.</string>
    <string name="tips_hyresratt_h2">- Hyresrätt, vanligaste (för yngre) bostadsvarianten.</string>
    <string name="tips_hyresratt_text">Hyresrätt är som det låter, du hyr din bostad och då behöver inte lägga en massa pengar på att köpa stället, enda ”extra” utlägget du ofta får göra är att betala en eller två extra hyror vid första hyran för att visa att du kan spara pengar och pengarna hålls även som en ”säkerhet” av hyresvärden om du tar sönder något i lägenheten, pengarna får du tillbaka om lägenheten/huset lämnas tillbaka i bra skick vid din nästa flytt. Hyran betalas i förskott, ofta i slutet av månaden. Hyran i sig är satt sedan tidigare och du kan generellt inte påverka kostnaden alls, om det är något problem med ditt boende som gör att du faktiskt inte kan använda hela utan eller liknande kan du kontakta hyresvärden och/eller hyresgästföreningen som då kan bestämma att du får betala mindre tills felet är fixat, gör detta på rätt sätt! Sluta INTE bara betala hyran för att du tycker något är fel, du kan du bli vräkt av hyresvärden utan några större problem. Hyrans allmänna sänkning eller höjning diskuteras alltid av hyresvärden och hyresgästföreningen. Tänk på vad som står i kontraktet om det är kall- eller varmhyra du betalar, detta betyder bara om du får uppvärmningselen i hyran eller om du måste betala detta själv via ett elbolag. Nyare lägenheter har ofta EKO vilket då betyder att hyresvärden betalar upp till en viss grad, typ 20 grader Celsius och allt utöver det betalar du själv via ett annat elbolag. Du får inte hyra ut din bostad i andra hand utan ett godkännande av din hyresvärd, gör du detta kan du bli vräkt.</string>
    <string name="tips_hyra_andrahand_h2">- Hyra i andra hand</string>
    <string name="tips_hyra_andrahand_text">Detta innebär att man hyr en bostad av någon som själv är hyresgäst, men av någon anledning inte ska bo i lägenheten under en tid. Andrahandsuthyrning måste vara godkänt av hyresvärden eller hyresnämnden, annars riskerar både du och förstahandshyresgästen att bli vräkta. Beslutet/godkännande lämnas oftast för en begränsad tid som man sedan får ansöka nytt om ifall du vill hyra ut den längre. När du hyr i andra hand är förstahandshyresgästen den som faktiskt är skyldig till alla problem eller skador som uppstår, du kan se det som att andra hands hyresgästen är ett barn och första hands personen är föräldern som får ta ansvaret för sitt barn. Att hyra i andra hand kan både vara möblerat och tomt, hyran du betalar kan då också variera då man har rätt att ta ut extra pengar för att man har en möblerad lägenhet. Andra hand är bra på många sätt för att snabbt komma till en egen lägenhet men har sina stora problem, primärt att du hyr oftast på mellan 6 - 12 månader åt gången, därav är det inte så långtidssäkert och beroende på vad ni skriver in i ert kontrakt så kan förstahands uthyraren säga till dig en dag att du ska flytta ut om en månad för personen vill ha tillbaka lägenheten. Va säker på att skriva in i ett kontrakt vilken uppsägningstid ni har, denna gäller från båda hållen!</string>
    <string name="tips_inneboende_h2">- Inneboende</string>
    <string name="tips_inneboende_text">Att bo som inneboende är liknande som att hyra i andrahands men du bor inte själv i bostaden utan hyr en del av den och oftast bor med förstahandshyresgästen.</string>
    <string name="tips_kollektivboende_h2">- Kollektivboende</string>
    <string name="tips_kollektivboende_text">Att bo i ett kollektiv är liknande inneboende men i bostaden bor det flera stycken inneboenden som alla delar på hela bostaden. Ansvaret här gäller samma som vid andrahands, det är förstahandshyresgästen eller ägaren som är ytterst ansvarig. Positivt och negativt kan du säkert tänka på själv men är man yngre och har på detta sättet tillgång till en större och finare bostad och man får dessutom bo med vänner är detta ett trevligt allternativ. Va bara noga med vem som tar hand om vad i bostaden så inte problem uppstår efter ”smekmånadsperioden”.</string>
    <string name="tips_studentbostad_h2">- Studentbostad</string>
    <string name="tips_studentbostad_text">Studentbostäder är hyresrätter som är reserverade för studenter och finns i de flesta städerna med större högskolor och universitet. Förutom vanliga lägenheter brukar det också finnas studentrum, vilket innebär att man har ett eget rum (med eller utan toalett/dusch) och delar kök med de andra som bor där. Såväl studentrum som studentlägenheter är allt som oftast hyresrätter så i princip gäller samma regler som för vanliga hyresrätter. En fördel med studentbostäder är dels att det brukar vara lättare att få tag på dessa (eftersom de är reserverade för studenter), dels att hyrorna ibland är lägre. Även här är kösystem vanliga. Ofta kan högskolan/universitetet eller studentkåren i respektive studentstad ge vägledning vilka hyresvärdar och stiftelser som tillhandahåller studentbostäder.</string>
    <string name="tips_att_tanka_pa_h2">Att tänka på innan flytt:</string>
    <string name="tips_forsakring_h2">- Försäkringar</string>
    <string name="info_h1">Hej och tack för att du vill ge den här appen ett försök!</string>
    <string name="info_h2">Idén är att ge dig svar på många frågor du kan ha när det närmar sig en flytt, hjälpa dig komma ihåg saker och se till att flytten blir så smidig som möjligt.</string>
    <string name="info_h3">Uppifrån och ned så har du ”Flytthjälpen”, ”To-Do listan” och ”Tips och trix”.</string>
    <string name="info_h4">Nerifrån och upp har du lite information om varje:</string>
    <string name="info_h5">Tips och trix (grönish),</string>
    <string name="info_h6">Låt mig starta med att säga jag ber direkt om ursäkt för de långa texterna! Jag flyttade nyligen och fick en hel del att tänka på, all (som jag kan komma på) information jag samlade på mig under denna upplevelsen finns i delen ”Tips och trix”. Här kan du läsa om olika typer av boenden och vad som gör varje speciell. Du kan även läsa om små saker som är bra att tänka på när det kommer till flyttar, både direkt och indirekt.</string>
    <string name="info_h7">To-Do listan (gulisch),</string>
    <string name="info_h8">Den är rätt självförklarande men varför inte? Du kommer säkert på en hel del saker du behöver ha gjort, som att köpa just den där färgen du tänkte dig eller något liknande, och det kan vara bra att skriva upp på en checklista. Listan i sig är så enkel jag kunde göra den, du trycker på ”+” - tecknet uppe i högra hörnet för att lägga till en sak i listan, skriv sedan i vad det är du har tänkt dig och klicka på ”OK” eller ”retur” för att spara informationen. När du har gjort din uppgift klickar du helt enkelt på saken i listan så får du en checkbock till höger om saken eller så swipar du vänster över saken i listan så får du fram ett rött ”delete” vilken också är rätt självförklarande, akta så du inte swipar för hårt, då försvinner saken direkt!</string>
    <string name="info_h9">Flytthjälpen (lila)</string>
    <string name="info_h10">Denna delen kanske är den som behöver mest förklarande. Här använder du datepickern (snurrhjulet) och väljer vilket datum det är du ska flytta, denna kommer då att spara detta i appen och skicka notiser till dig med hjälpfulla tips vid bra tillfällen för att underlätta din flytt och se till att du inte glömmer något viktigt.</string>
    <string name="info_h11">Tack åter igen och ni kan nå mig för support på facebook via länken:</string>
    <string name="info_h12">https://www.facebook.com/Flytta-1608902132504805/</string>
    <string name="popupH1">What To-Do?</string>
    <string name="popup_plainTextHint">Sak att komma ihåg</string>
    <string name="guiden_h1">Välkommen till flytthjälpen</string>
    <string name="guiden_h2">Här får du hjälp med just din flytt i form av notiser du kommer få under tiden destu närmare flytten kommer.</string>
    <string name="guiden_h2_2">Välj vilket datum du ska flytta genom att klicka på knappen ovan, tryck sedan på knappen \"HELP\" nedan så är du igång!</string>
    <string name="guiden_h3">Klicka på knappen nedan för att välja ditt flyttdatum</string>
    <string name="cancel_button">Starta om</string>
    <string name="guiden_h2_booked">Nu är notiserna bokade, lycka till med flytten! \nVill du starta om, stänga av eller sätta ett annat datum, klicka på knappen "Starta om" ovan</string>
    <string name="button_x">X</string>
    <string name="add_button">+</string>
</resources>